<?xml version="1.0"?>
<package format="2">
  <name>teleop2d</name>
  <version>0.0.0</version>
  <description>The teleop2d package</description>
  <maintainer email="alonspinner@gmail.com">alon</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>python-numpy</exec_depend>
</package>
